Fixed admin panel's z-index.

--- a/stylesheets/admin/imcms-admin_panel.css
+++ b/stylesheets/admin/imcms-admin_panel.css
@@ -7,6 +7,7 @@
     -moz-transition: all .3s;
     -o-transition: all .3s;
     transition: all .3s;
+    z-index: 1500;
 }
 
 .imcms-admin-panel {
